Fixed alignment of navbar

--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,14 @@ html {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  
 }
-
+ul.wrapper {
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+}
 button {
   font-size: 1.5rem;
   padding: 0.5rem 1rem;
